--- a/html/findId.html
+++ b/html/findId.html
@@ -15,10 +15,10 @@
         </div>
         <div class="insertBox">
             <span>전화번호 : </span>
-            <input id="pwBox"type="password" length="18" maxlength="16">
+            <input id="pwBox" type="password" length="18" maxlength="16">
         </div>
-        <button id="button">아이디 찾기</button>
+        <button id="button" onclick="searchId()">아이디 찾기</button>
     </div>
-    <!-- <button id="backButton"></button> -->
+    <script src="../js/makeAccount.js"></script>
 </body>
 </html>
