--- a/html/findPw.html
+++ b/html/findPw.html
@@ -21,8 +21,8 @@
             <span>전화번호 : </span>
             <input id="pwBox"type="password" length="18" maxlength="16">
         </div>
-        <button id="button">비밀번호 찾기</button>
+        <button id="button" onclick="searchPw()">비밀번호 찾기</button>
     </div>
-    
+    <script src="../js/makeAccount.js"></script>
 </body>
 </html>
