--- a/html/showInfo.html
+++ b/html/showInfo.html
@@ -13,12 +13,12 @@
     <main>
         <div id="loginBox">
             <div class="insertBox">
-                <span id="nameFont">이름 : </span>
-                <span id="nameFont">이소현 </span>
+                <span class="nameFont">이름 : </span>
+                <span class="nameFont">이소현 </span>
             </div>
             <div class="insertBox">
                 <span id="idFont">아이디 : </span>
-                <span id="nameFont">sohyunxxi</span>
+                <span class="nameFont">sohyunxxi</span>
 
             </div>
             <div class="insertBox">
@@ -47,7 +47,7 @@
         <img src="../image/back.png" id="backImg" onclick="moveBackEvent()">
         <div id="buttonBox">
             <button class="footerButtons" ><a class="noColor" href="updateInfo.html">수정</a></button>
-            <button class="footerButtons" onclick="deleteEvent()">삭제</button>
+            <button class="footerButtons" onclick="deleteEvent()">탈퇴</button>
         </div>
     </footer>
     <script src="../js/showInfo.js"></script>
