--- a/html/login.html
+++ b/html/login.html
@@ -17,7 +17,7 @@
             <span>비밀번호 : </span>
             <input id="pwBox"type="password" length="18" maxlength="16">
         </div>
-        <button id="button">로그인</button>
+        <button id="button" onclick="checkNull()">로그인</button>
     </div>
     <div id="linkBox">
         <a class="linkFont" href="findId.html">아이디 찾기</a>
@@ -25,4 +25,5 @@
         <a class="linkFont" href="makeAccount.html">회원가입</a>
     </div>
 </body>
+<script src="../js/makeAccount.js"></script>
 </html>
